fixed remember me not showing problem

--- a/app/assets/stylesheets/landing_page/master.scss
+++ b/app/assets/stylesheets/landing_page/master.scss
@@ -621,7 +621,6 @@ textarea {
 /* ====== Header ======= */
 .header {
   background: rgba(53, 55, 60, 0.8);
-  color: #fff;
   width: 100%;
   z-index: 100;
   min-height: 70px;
